--- a/experiences.html
+++ b/experiences.html
@@ -974,9 +974,9 @@ h1.man-headingexprience {
                                 <div class="manexprieninner-cont-box">
                                    <img src="assests/sliderimg222.png" alt="Slide 1">
                                     <div class="exprienceslider-content">
-                                        <p class="mantop-exprince-cont">LONE PINE KOALA SANCTUARY</p>
+                                        <p class="mantop-exprince-cont">PLANETARIUM</p>
                                         <div class="morni-exp-cont">
-                                       <h3 class="man-exprience-head">Fig Tree Pocket</h3>
+                                       <h3 class="man-exprience-head">Mt Cootha</h3>
                                         <a href="#" class="manlearnmore-exprien">Learn more</a>
                                         </div>
                                     </div>
@@ -985,12 +985,8 @@ h1.man-headingexprience {
                                 
                                 <div class="flip-box-back">
                                     <div class="flipback-content">
-                                      <h2>LONE PINE KOALA SANCTUARY</h2>
-                                      <p>Lone Pine Koala Sanctuary, located in Brisbane, Australia, is the world’s oldest
-                                      and largest koala sanctuary, providing a unique and intimate opportunity to connect
-                                      with some of Australia’s most beloved wildlife. Established in 1927, Lone Pine is not 
-                                      only a sanctuary for koalas but also home to a wide variety of native species, including 
-                                      kangaroos, wombats, dingoes, and birds, making it a must-visit destination for animal lovers and nature enthusiasts alike.</p>
+                                      <h2>PLANETARIUM</h2>
+                                      <p>\Discover the wonders of the universe at the Brisbane Planetarium. Perfect for aspiring astronomers or anyone curious about the stars, this experience includes breathtaking shows in the Cosmic Skydome, as well as interactive exhibits.</p>
                                   </div>
                                 </div>
                             </div>
