--- a/experiences.html
+++ b/experiences.html
@@ -986,7 +986,7 @@ h1.man-headingexprience {
                                 <div class="flip-box-back">
                                     <div class="flipback-content">
                                       <h2>PLANETARIUM</h2>
-                                      <p>\Discover the wonders of the universe at the Brisbane Planetarium. Perfect for aspiring astronomers or anyone curious about the stars, this experience includes breathtaking shows in the Cosmic Skydome, as well as interactive exhibits.</p>
+                                      <p>Discover the wonders of the universe at the Brisbane Planetarium. Perfect for aspiring astronomers or anyone curious about the stars, this experience includes breathtaking shows in the Cosmic Skydome, as well as interactive exhibits.</p>
                                   </div>
                                 </div>
                             </div>
@@ -1394,9 +1394,9 @@ h1.man-headingexprience {
                                  <div class="manexprieninner-cont-box">
                                <img src="assests/newslider2img.png" alt="Slide 1">
                                         <div class="exprienceslider-content">
-                                           <p class="mantop-exprince-cont">MOVE</p>
+                                           <p class="mantop-exprince-cont">QAGOMA</p>
                                             <div class="morni-exp-cont">
-                                         <h3 class="man-exprience-head">Build strength to avoid re-injury</h3>
+                                         <h3 class="man-exprience-head">SOUTH BANK</h3>
                                            <a href="#" class="manlearnmore-exprien">Learn more</a>
                                             </div>
                                         </div>
@@ -1405,12 +1405,14 @@ h1.man-headingexprience {
                                 
                                 <div class="flip-box-back">
                                     <div class="flipback-content">
-                                      <h2>MOVE</h2>
-                                      <p>Movement is an essential part of life, whether it's the physical act of walking, running, stretching,
-                                      or the mental and emotional shifts we experience in response to change. The concept of "move" encompasses
-                                      more than just physical activity; it’s about progress, growth, and the energy that fuels both our bodies 
-                                      and minds. From small, everyday actions to significant life decisions, movement is the driving force behind
-                                      personal and societal transformation</p>
+                                      <h2>QAGOMA</h2>
+                                      <p>Explore a world of creativity and inspiration at the Queensland Art Gallery and Gallery of Modern Art. With ever-changing exhibitions, QAGOMA offers something for everyone—from classic masterpieces to cutting-edge contemporary art.
+QAGOMA (South Bank, Brisbane)
+Activity length: 1.5-2 hours
+10 am - 5 pm every day
+Free entry to permanent collections
+Special exhibitions: Variable
+</p>
                                   </div>
                                 </div>
                             </div>
