--- a/experiences.html
+++ b/experiences.html
@@ -1697,7 +1697,7 @@ Special exhibitions: Variable
                                 <div class="new_slider_3_manexprieninner-cont-box">
                                  <img src="assests/slider2img.png" alt="Slide 1">
                                         <div class="new_slider_3_exprienceslider-content">
-                                          <p class="new_slider_3_mantop-exprince-cont">COFFEE AND CAKES</p>
+                                          <p class="new_slider_3_mantop-exprince-cont">BREW AND A BITE BREAK</p>
                                            <div class="new_slider_3_morni-exp-cont">
                                            <h3 class="new_slider_3_man-exprience-head">You decide!</h3>
                                            <a href="#" class="new_slider_3_manlearnmore-exprien">Learn more</a>
@@ -1708,7 +1708,7 @@ Special exhibitions: Variable
                                 
                                 <div class="flip-box-back">
                                     <div class="flipback-content">
-                                      <h2>COFFEE AND CAKES</h2>
+                                      <h2>BREW AND A BITE BREAK</h2>
                                       <p>Coffee and cakes—two simple pleasures that come together to create a timeless combination.
                                       Whether you're enjoying a morning pick-me-up, an afternoon treat, or a cozy moment with friends,
                                       the pairing of a rich, aromatic coffee with a sweet, decadent slice of cake is a tradition enjoyed
@@ -1901,7 +1901,7 @@ Special exhibitions: Variable
                                 <div class="new_slider_3_manexprieninner-cont-box">
                                     <img src="assests/slider2img.png" alt="Slide 1">
                                         <div class="new_slider_3_exprienceslider-content">
-                                          <p class="new_slider_3_mantop-exprince-cont">COFFEE AND CAKES</p>
+                                          <p class="new_slider_3_mantop-exprince-cont">BREW AND A BITE BREAK</p>
                                            <div class="new_slider_3_morni-exp-cont">
                                            <h3 class="new_slider_3_man-exprience-head">You decide!</h3>
                                            <a href="#" class="new_slider_3_manlearnmore-exprien">Learn more</a>
@@ -1912,7 +1912,7 @@ Special exhibitions: Variable
                                 
                                 <div class="flip-box-back">
                                     <div class="flipback-content">
-                                      <h2>COFFEE AND CAKES</h2>
+                                      <h2>BREW AND A BITE BREAK</h2>
                                       <p>Coffee and cakes—two simple pleasures that come together to create a timeless combination.
                                       Whether you're enjoying a morning pick-me-up, an afternoon treat, or a cozy moment with friends,
                                       the pairing of a rich, aromatic coffee with a sweet, decadent slice of cake is a tradition enjoyed 
