--- a/index.html
+++ b/index.html
@@ -682,8 +682,7 @@ have been an absolute blast and deeply enriching. Everyone needs to experience t
                         </div>
                         <div class="tab-detail">
                             <h3>Your Ultimate Adventure Companion</h3>
-                            <p>After building your perfect day by selecting your activities, you'll receive an email with all the
-logistics and important details. This includes your custom itinerary, activity times, locations, and any additional info you'll need for a smooth and fun- filled day.</p>
+                            <p>Once you've mapped out your action-packed day, we’ll handpick a sidekick from our pool of enthusiastic carers—someone who’s perfectly suited to your chosen adventure. While we select the best fit based on your preferences and the activity, you always have the option to request a different carer if needed. Our goal is to match you with a companion who shares your adventurous spirit and helps make every moment unforgettable. Get ready to dive into the excitement with your ideal partner by your side!</p>
                         </div>
                     </div>
                 </div>
