--- a/experiences.html
+++ b/experiences.html
@@ -1297,8 +1297,8 @@ h1.man-headingexprience {
                                         <div class="exprienceslider-content">
                                              <p class="mantop-exprince-cont">SOUTH BANK BEACH</p>
                                                 <div class="morni-exp-cont">
-                                                <h3 class="man-exprience-head">South Bank</h3>
-                                            <h3 class="man-exprience-head">Mount Coot-tha Reserve, D'Aguilar national park +</h3>
+                                                <h3 class="man-exprience-head"></h3>
+                                            <h3 class="man-exprience-head">South Bank+</h3>
                                            <a href="#" class="manlearnmore-exprien">Learn more</a>
                                             </div>
                                         </div>
@@ -1428,9 +1428,9 @@ Special exhibitions: Variable
                         <!--<div class="manexprieninner-cont-box">-->
                         <!--    <img src="assests/slider2img.png" alt="Slide 1">-->
                         <!--    <div class="exprienceslider-content">-->
-                        <!--        <p class="mantop-exprince-cont">NATIONAL PARK WALKS</p>-->
+                        <!--        <p class="mantop-exprince-cont">GRITLIFE AT HOME</p>-->
                         <!--        <div class="morni-exp-cont">-->
-                        <!--        <h3 class="man-exprience-head">Mount Coot-tha Reserve, D'Aguilar national park +</h3>-->
+                        <!--        <h3 class="man-exprience-head">YOU DECIDE</h3>-->
                         <!--        <a href="#" class="manlearnmore-exprien">Learn more</a>-->
                         <!--        </div>-->
                         <!--    </div>-->
@@ -1447,9 +1447,9 @@ Special exhibitions: Variable
                                  <div class="manexprieninner-cont-box">
                                  <img src="assests/slider2img.png" alt="Slide 1">
                                         <div class="exprienceslider-content">
-                                          <p class="mantop-exprince-cont">NATIONAL PARK WALKS</p>
+                                          <p class="mantop-exprince-cont">GRITLIFE AT HOME</p>
                                             <div class="morni-exp-cont">
-                                        <h3 class="man-exprience-head">Mount Coot-tha Reserve, D'Aguilar national park +</h3>
+                                        <h3 class="man-exprience-head">YOU DECIDE</h3>
                                            <a href="#" class="manlearnmore-exprien">Learn more</a>
                                             </div>
                                         </div>
@@ -1458,13 +1458,8 @@ Special exhibitions: Variable
                                 
                                 <div class="flip-box-back">
                                     <div class="flipback-content">
-                                      <h2>NATIONAL PARK WALKS</h2>
-                                      <p>Walking through national parks offers a unique and immersive way to connect with 
-                                      nature, providing fresh air, scenic landscapes, and the chance to discover the rich 
-                                      biodiversity that these protected areas have to offer. From short, leisurely strolls
-                                      to challenging hikes, national park walks cater to all ages and abilities, making them 
-                                      ideal for anyone looking to escape into the great outdoors. With well-maintained trails,
-                                      stunning views, and the opportunity to observe wildlife, national park walks are a perfect way to experience nature’s beauty firsthand.</p>
+                                      <h2>GRITLIFE AT HOME</h2>
+                                      <p>Prepare for your adventurous day or get everyday tasks done, so you have more time for fun</p>
                                   </div>
                                 </div>
                             </div>
