--- a/about.html
+++ b/about.html
@@ -137,7 +137,7 @@ $(document).ready(function(){
             color: #000;
     }
      section.about-background {
-    background-image: url(assests/desktop_background.jpeg);
+    background-image: url(assests/About_us_ov.jpg);
     padding: 250px 0px;
     background-position: center;
     background-repeat: no-repeat;
@@ -349,6 +349,7 @@ section.Manifesto-section {
                     <li class="link"><a href="experiences.html"> Experiences </a></li>
                     <li class="link"><a href="terms-of-conditions.html"> Terms and Conditions </a></li>
                     <li class="link"><a href="privacy-policy.html"> Privacy Policy </a></li>
+                     <li class="link"><a href="faq.html"> FAQ </a></li>
                     <!--<li class="link"><a href="#">Company &nbsp;<i class="bi bi-chevron-down"></i></a></li>-->
                 </ul>
             </div>
@@ -364,6 +365,7 @@ section.Manifesto-section {
                     <li class="link"><a href="about.html">About Us</a></li>
                     <li class="link"><a href="carers.html">Our Carers </a></li>
                     <li class="link"><a href="experiences.html">Experiences </a></li>
+                     <li class="link"><a href="faq.html"> FAQ </a></li>
                 </ul>
             </div>
            <!-- Header End -->
@@ -386,7 +388,7 @@ section.Manifesto-section {
         <div class="first-inner-flex">
         <div class="image-section">
                        
-            <img src="assests/about-section-2.jpeg" alt="solution-img">
+            <img src="assests/About us (1).jpg" alt="solution-img">
                         <div class="video-story">
                                         <h3>Watch V's Story</h3>
                                     <button class="btn-video-about">
@@ -445,7 +447,7 @@ section.Manifesto-section {
      <div class="wrapper">
           <div class="Manifesto-flex-sec">
                  <div class="image-manboxcont">
-                      <img src="assests/aboutimg.jpeg" alt="img1223">
+                      <img src="assests/manfesto section.jpg" alt="img1223">
                  </div>
               
                   <div class="inner-columnman-box">
