--- a/faq.html
+++ b/faq.html
@@ -124,7 +124,7 @@ $(document).ready(function(){
 
 <style>
 .banner-carees-page {
-    background-image: url(assests/desktop_background.jpeg) !important;
+    background-image: url(assests/p_and_p.jpg) !important;
     padding: 250px 0px;
     background-position: center;
     background-repeat: no-repeat;
@@ -355,6 +355,7 @@ section.faq-section-second {
                     <li class="link"><a href="experiences.html"> Experiences </a></li>
                     <li class="link"><a href="terms-of-conditions.html"> Terms and Conditions </a></li>
                     <li class="link"><a href="privacy-policy.html"> Privacy Policy </a></li>
+                     <li class="link"><a href="faq.html"> FAQ </a></li>
                     <!--<li class="link"><a href="#">Company &nbsp;<i class="bi bi-chevron-down"></i></a></li>-->
                 </ul>
             </div>
@@ -370,6 +371,7 @@ section.faq-section-second {
                     <li class="link"><a href="about.html">About Us</a></li>
                     <li class="link"><a href="carers.html">Our Carers </a></li>
                     <li class="link"><a href="experiences.html">Experiences </a></li>
+                     <li class="link"><a href="faq.html"> FAQ </a></li>
                 </ul>
             </div>
            <!-- Header End -->
