--- a/header.html
+++ b/header.html
@@ -127,6 +127,52 @@ $(document).ready(function(){
 
 
 
+<!--preloader-->
+<script>
+  window.addEventListener('load', function () {
+    const preloader = document.getElementById('preloader');
+    preloader.style.opacity = '0'; // Fade-out effect
+    setTimeout(() => {
+      preloader.style.display = 'none'; // Remove from view
+    }, 500); // Match fade-out duration
+  });
+</script>
+
+<!--preloader ends-->
+<style>
+    #preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #fff; /* Background color of the preloader */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999; /* Ensure it stays on top of other elements */
+}
+
+/* Spinner */
+.spinner {
+  width: 50px;
+  height: 50px;
+  border: 5px solid rgba(0, 0, 0, 0.1);
+  border-top: 5px solid #3498db; /* Color of the spinner */
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+/* Spin animation */
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+</style>
 
 
  <header class="hero-section">
@@ -149,6 +195,7 @@ $(document).ready(function(){
                     <li class="link"><a href="experiences.html"> Experiences </a></li>
                     <li class="link"><a href="terms-of-conditions.html"> Terms and Conditions </a></li>
                     <li class="link"><a href="privacy-policy.html"> Privacy Policy </a></li>
+                      <li class="link"><a href="faq.html"> FAQ</a></li>
                     <!--<li class="link"><a href="#">Company &nbsp;<i class="bi bi-chevron-down"></i></a></li>-->
                 </ul>
             </div>
@@ -166,6 +213,10 @@ $(document).ready(function(){
                     <li class="link"><a href="experiences.html">Experiences </a></li>
                 </ul>
             </div>
+            
+            <div id="preloader">
+  <div class="spinner"></div>
+</div>
            <!-- Header End -->
           </div>
             </div>
