--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -187,7 +187,7 @@ ul.privcy-list-style li a {
 .banner {
             width: 100%;
             height: 500px;
-            background-image: url('assests/desktop_background.jpeg'); 
+            background-image: url('assests/privacy_policy.jpg'); 
             background-size: cover;
             background-position: center;
             display: flex;
@@ -234,6 +234,7 @@ ul.privcy-list-style li a {
                     <li class="link"><a href="experiences.html"> Experiences </a></li>
                     <li class="link"><a href="terms-of-conditions.html"> Terms and Conditions </a></li>
                     <li class="link"><a href="privacy-policy.html"> Privacy Policy </a></li>
+                     <li class="link"><a href="faq.html"> FAQ </a></li>
                     <!--<li class="link"><a href="#">Company &nbsp;<i class="bi bi-chevron-down"></i></a></li>-->
                 </ul>
             </div>
@@ -249,6 +250,7 @@ ul.privcy-list-style li a {
                     <li class="link"><a href="about.html">About Us</a></li>
                     <li class="link"><a href="carers.html">Our Carers </a></li>
                     <li class="link"><a href="experiences.html">Experiences </a></li>
+                     <li class="link"><a href="faq.html"> FAQ </a></li>
                 </ul>
             </div>
            <!-- Header End -->
