--- a/terms-of-conditions.html
+++ b/terms-of-conditions.html
@@ -197,7 +197,7 @@ section.manterms-mainsection .wrapper {
 .banner {
             width: 100%;
             height: 500px;
-            background-image: url('assests/desktop_background.jpeg'); 
+            background-image: url('assests/t and c (1).jpg'); 
             background-size: cover;
             background-position: center;
             display: flex;
@@ -243,6 +243,7 @@ section.manterms-mainsection .wrapper {
                     <li class="link"><a href="experiences.html"> Experiences </a></li>
                     <li class="link"><a href="terms-of-conditions.html"> Terms and Conditions </a></li>
                     <li class="link"><a href="privacy-policy.html"> Privacy Policy </a></li>
+                     <li class="link"><a href="faq.html"> FAQ </a></li>
                     <!--<li class="link"><a href="#">Company &nbsp;<i class="bi bi-chevron-down"></i></a></li>-->
                 </ul>
             </div>
@@ -258,6 +259,7 @@ section.manterms-mainsection .wrapper {
                     <li class="link"><a href="about.html">About Us</a></li>
                     <li class="link"><a href="carers.html">Our Carers </a></li>
                     <li class="link"><a href="experiences.html">Experiences </a></li>
+                     <li class="link"><a href="faq.html"> FAQ </a></li>
                 </ul>
             </div>
            <!-- Header End -->
