Update experiences ( thursday 1).html

--- a/experiences.html
+++ b/experiences.html
@@ -1975,7 +1975,7 @@ h1.man-headingexprience {
                                 <div class="new_slider_3_manexprieninner-cont-box">
                                     <img src="assests/Brew and a bite break.jpg" alt="Slide 1">
                                         <div class="new_slider_3_exprienceslider-content">
-                                          <p class="new_slider_3_mantop-exprince-cont">BREW AND A BITE BREAK</p>
+                                          <p class="new_slider_3_mantop-exprince-cont">HOME GAMING HANGOUT</p>
                                            <div class="new_slider_3_morni-exp-cont">
                                            <h3 class="new_slider_3_man-exprience-head">You decide!</h3>
                                            <a href="#" class="new_slider_3_manlearnmore-exprien">Learn more</a>
@@ -1986,12 +1986,12 @@ h1.man-headingexprience {
                                 
                                 <div class="flip-box-back">
                                     <div class="flipback-content">
-                                      <h2>BREW AND A BITE BREAK</h2>
-                                      <p>Coffee and cakes—two simple pleasures that come together to create a timeless combination.
-                                      Whether you're enjoying a morning pick-me-up, an afternoon treat, or a cozy moment with friends,
-                                      the pairing of a rich, aromatic coffee with a sweet, decadent slice of cake is a tradition enjoyed 
-                                      across cultures and continents. From the comforting warmth of freshly brewed coffee to the indulgent
-                                      flavors of cakes, this duo offers a perfect blend of comfort, flavor, and connection.</p>
+                                      <h2>HOME GAMING HANGOUT</h2>
+                                      <ul class="main_ul">-->
+<li>Enjoy a gaming session in the comfort of your home. Ideal for clients with a strong interest in video games, this activity offers a fun and engaging way to connect and unwind.</li>-->
+<li>Activity length: 1 hour +</li>-->
+<li>Flexible, based on your schedule.</li>-->
+</ul>-->
                                   </div>
                                 </div>
                             </div>
