Update experiences (thursday 2).html

--- a/experiences.html
+++ b/experiences.html
@@ -1973,7 +1973,7 @@ h1.man-headingexprience {
                             <div class="flip-box-inner">
                                 <div class="flip-box-front">
                                 <div class="new_slider_3_manexprieninner-cont-box">
-                                    <img src="assests/Brew and a bite break.jpg" alt="Slide 1">
+                                    <img src="assests/home gaming hangout.jpg" alt="Slide 1">
                                         <div class="new_slider_3_exprienceslider-content">
                                           <p class="new_slider_3_mantop-exprince-cont">HOME GAMING HANGOUT</p>
                                            <div class="new_slider_3_morni-exp-cont">
@@ -1989,9 +1989,9 @@ h1.man-headingexprience {
                                       <h2>HOME GAMING HANGOUT</h2>
                                       <ul class="main_ul">-->
 <li>Enjoy a gaming session in the comfort of your home. Ideal for clients with a strong interest in video games, this activity offers a fun and engaging way to connect and unwind.</li>-->
-<li>Activity length: 1 hour +</li>-->
-<li>Flexible, based on your schedule.</li>-->
-</ul>-->
+<li>Activity length: 1 hour +</li>
+<li>Flexible, based on your schedule.</li>
+</ul>
                                   </div>
                                 </div>
                             </div>
