--- a/experiences.html
+++ b/experiences.html
@@ -1987,8 +1987,8 @@ h1.man-headingexprience {
                                 <div class="flip-box-back">
                                     <div class="flipback-content">
                                       <h2>HOME GAMING HANGOUT</h2>
-                                      <ul class="main_ul">-->
-<li>Enjoy a gaming session in the comfort of your home. Ideal for clients with a strong interest in video games, this activity offers a fun and engaging way to connect and unwind.</li>-->
+                                      <ul class="main_ul">
+<li>Enjoy a gaming session in the comfort of your home. Ideal for clients with a strong interest in video games, this activity offers a fun and engaging way to connect and unwind.</li>
 <li>Activity length: 1 hour +</li>
 <li>Flexible, based on your schedule.</li>
 </ul>
