--- a/experiences.html
+++ b/experiences.html
@@ -2296,16 +2296,12 @@ h1.man-headingexprience {
                                 <div class="flip-box-back">
                                     <div class="flipback-content">
                                       <h2>URBAN ADVENTURE</h2>
-                                      <p>Urban adventure offers a unique way to experience the vibrant life of a city,
-                                      combining exploration, culture, and excitement in one exhilarating package. Unlike
-                                      traditional outdoor adventures, urban exploration encourages participants to engage with 
-                                      their surroundings in creative and often unexpected ways. From navigating bustling streets 
-                                      and uncovering hidden gems to indulging in local cuisines and experiencing the rich cultural 
-                                      tapestry, an urban adventure invites everyone to discover the heartbeat of the city.</p>
-                                  </div>
-                                </div>
-                            </div>
-                        </div> 
+                                      <ul class="main_ul">
+<li>Start your session with an exciting bouldering session at Urban Climb, West End. Whether you’re a beginner or a pro, this adrenaline-pumping activity will push your limits, with support workers there to help you along the way. Afterward, unwind with a peaceful stroll along the West End River Walk. Take in the riverside views, enjoy the fresh air, and let your muscles relax as you wind down from an action-packed day.</li>
+<li>Activity length 2-2.5 hours </li>
+<li>6am - 6pm</li>
+<li>19$</li>
+</ul>
                         
                     </div>
                     <div class="four_slide_new_slider_3_expience-innerslide3-1">
