--- a/experiences.html
+++ b/experiences.html
@@ -2302,7 +2302,10 @@ h1.man-headingexprience {
 <li>6am - 6pm</li>
 <li>19$</li>
 </ul>
-                        
+                              </div>
+                                </div>
+                            </div>
+                        </div>                      
                     </div>
                     <div class="four_slide_new_slider_3_expience-innerslide3-1">
                         <!--<div class="four_slide_new_slider_3_manexprieninner-cont-box">-->
