--- a/index.html
+++ b/index.html
@@ -838,7 +838,7 @@ programs<sup></sup>
                                 <path d="M16.672 4.977a.513.513 0 0 0 .041-.849.5.5 0 0 0-.455-.078c-.388.12-1.808.608-3.14 1.678C11.779 6.805 10.5 8.498 10.5 11c0 2.207 1.503 4 3.5 4h.5a3.5 3.5 0 0 0 .518-6.962c.162-2.05 1.377-2.893 1.654-3.061m-8.5-.05a.513.513 0 0 0 
                                 .041-.849A.5.5 0 0 0 7.758 4c-.388.12-1.808.608-3.14 1.678C3.279 6.755 2 8.448 2 10.95c0 2.207 1.503 4 3.5 4H6a3.5 3.5 0 0 0 .518-6.962c.162-2.05 1.377-2.893 1.654-3.061"></path></svg>
                                 <p>GritLife made Alex more social and confident. He's thriving in ways I hadn’t seen before.</p>
-                                <h3 class="manauther-name-new">Mark, Father of Alex, 17</h3>
+                                <h3 class="manauther-name-new">Mark, Father of Alex, 14</h3>
                             </div>
                             </div>
                         </div>
@@ -856,13 +856,13 @@ programs<sup></sup>
                         </div>
                          <div>
                             <div class="main-member-sec">
-                            <img draggable="true" src="assests/iommi_14fc08a271.jpeg" alt="Product-specific campaign">
+                            <img draggable="true" src="assests/Jess.jpeg" alt="Product-specific campaign">
                             <div class="mannew-section-cont-flex">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentcolor" viewBox="0 0 20 20" aria-hidden="true" class="_quoteIcon_d6277ee">
                                 <path d="M16.672 4.977a.513.513 0 0 0 .041-.849.5.5 0 0 0-.455-.078c-.388.12-1.808.608-3.14 1.678C11.779 6.805 10.5 8.498 10.5 11c0 2.207 1.503 4 3.5 4h.5a3.5 3.5 0 0 0 .518-6.962c.162-2.05 1.377-2.893 1.654-3.061m-8.5-.05a.513.513 0 0 0 
                                 .041-.849A.5.5 0 0 0 7.758 4c-.388.12-1.808.608-3.14 1.678C3.279 6.755 2 8.448 2 10.95c0 2.207 1.503 4 3.5 4H6a3.5 3.5 0 0 0 .518-6.962c.162-2.05 1.377-2.893 1.654-3.061"></path></svg>
                                 <p>GritLife got me off the couch and into adventure. Now, I'm pushing my limits every day.</p>
-                                <h3 class="manauther-name-new">Tom, 18 </h3>
+                                <h3 class="manauther-name-new">Jess, 31 </h3>
                             </div>
                             </div>
                         </div>
