--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@ empowerment you deserve.</p>
                 
                            <div class="testimonial-slide">
                                 <div class="main-testmonils-cont">
-                                     <img src="assests/Jess.jpg" alt="solution-img">
+                                     <img src="assets/Jess.jpg" alt="solution-img">
                                     
                                     <div class="testimonilscontent-inner content-jess">
                                         <button class="playvideo-btn">
