--- a/index.html
+++ b/index.html
@@ -856,7 +856,7 @@ programs<sup></sup>
                         </div>
                          <div>
                             <div class="main-member-sec">
-                            <img draggable="true" src="assests/Jess.jpeg" alt="Product-specific campaign">
+                            <img draggable="true" src="assets/Jess.jpeg" alt="Product-specific campaign">
                             <div class="mannew-section-cont-flex">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentcolor" viewBox="0 0 20 20" aria-hidden="true" class="_quoteIcon_d6277ee">
                                 <path d="M16.672 4.977a.513.513 0 0 0 .041-.849.5.5 0 0 0-.455-.078c-.388.12-1.808.608-3.14 1.678C11.779 6.805 10.5 8.498 10.5 11c0 2.207 1.503 4 3.5 4h.5a3.5 3.5 0 0 0 .518-6.962c.162-2.05 1.377-2.893 1.654-3.061m-8.5-.05a.513.513 0 0 0 
