--- a/experiences.html
+++ b/experiences.html
@@ -1032,7 +1032,7 @@ h1.man-headingexprience {
                             <div class="flip-box-inner">
                                 <div class="flip-box-front">
                                 <div class="manexprieninner-cont-box">
-                                   <img src="assests/Planetarium.jpg" alt="Slide 1">
+                                   <img src="assests/planetarium.jpg" alt="Slide 1">
                                     <div class="exprienceslider-content">
                                         <p class="mantop-exprince-cont">PLANETARIUM</p>
                                         <div class="morni-exp-cont">
